--- a/SLBr/Pages/History.xaml
+++ b/SLBr/Pages/History.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="SLBr.Pages.Favourites"
+﻿<UserControl x:Class="SLBr.Pages.History"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -23,22 +23,40 @@
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <TextBlock FontWeight="DemiBold" Margin="0,0,10,0" VerticalAlignment="Center" HorizontalAlignment="Center" FontFamily="{StaticResource IconFontFamily}" TextAlignment="Center" FontSize="22" Text="&#xeb51;"/>
+                <TextBlock FontWeight="DemiBold" Margin="0,0,10,0" VerticalAlignment="Center" HorizontalAlignment="Center" FontFamily="{StaticResource IconFontFamily}" TextAlignment="Center" FontSize="22" Text="&#xe81c;"/>
 
-                <TextBlock Grid.Column="1" FontWeight="DemiBold" FontSize="25">Favourites</TextBlock>
+                <TextBlock Grid.Column="1" FontWeight="DemiBold" FontSize="25">History</TextBlock>
                 <TextBox x:Name="SearchBox" Grid.Column="2" HorizontalAlignment="Right" Width="300" TextChanged="SearchBox_TextChanged"/>
             </Grid>
         </Border>
         <WinUI:WinUITabControl Grid.Row="1" Style="{StaticResource WinUITabControl}">
-            <TabItem Header="Favourites bar" Tag="&#xe8b7;">
+            <!--<TabItem Header="Recently closed" Tag="&#xec6c;">
+                <ScrollViewer controls:SmoothScrollBehavior.Enable="True" VerticalScrollBarVisibility="Auto" Height="{Binding Path=ActualHeight, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=WinUI:WinUITabControl}}">
+                    <StackPanel Margin="25" MaxWidth="800">
+                        <DockPanel Margin="0,0,0,25" VerticalAlignment="Center" Width="Auto" HorizontalAlignment="Stretch">
+                            <TextBlock TextAlignment="Left" VerticalAlignment="Center" HorizontalAlignment="Left" Width="Auto" FontWeight="DemiBold" FontSize="25">Recently closed</TextBlock>
+                        </DockPanel>
+                    </StackPanel>
+                </ScrollViewer>
+            </TabItem>
+            <TabItem Style="{DynamicResource TabSeparator}" Margin="0,-5"/>
+            <TabItem Header="All" Tag="&#xe8a9;">
+                <ScrollViewer controls:SmoothScrollBehavior.Enable="True" VerticalScrollBarVisibility="Auto" Height="{Binding Path=ActualHeight, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=WinUI:WinUITabControl}}">
+                    <StackPanel Margin="25" MaxWidth="800">
+                        <DockPanel Margin="0,0,0,25" VerticalAlignment="Center" Width="Auto" HorizontalAlignment="Stretch">
+                            <TextBlock TextAlignment="Left" VerticalAlignment="Center" HorizontalAlignment="Left" Width="Auto" FontWeight="DemiBold" FontSize="25">All</TextBlock>
+                        </DockPanel>
+                    </StackPanel>
+                </ScrollViewer>
+            </TabItem>-->
+            <TabItem Header="Today" Tag="&#xe787;">
                 <ScrollViewer controls:SmoothScrollBehavior.Enable="True" VerticalScrollBarVisibility="Auto" Height="{Binding Path=ActualHeight, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=WinUI:WinUITabControl}}">
                     <StackPanel Margin="25" MaxWidth="800">
                         <DockPanel Margin="0,0,0,25" VerticalAlignment="Center" Width="Auto" HorizontalAlignment="Stretch" Height="35">
-                            <Button DockPanel.Dock="Right" Click="NewFavouriteButton_Click" x:Name="NewFavouriteButton" ToolTip="Add favourite" Content="&#xe710;" Margin="0,0,0,0" Style="{StaticResource ToolBarIconButton}"/>
                             <Button Visibility="Collapsed" Foreground="Red" DockPanel.Dock="Right" Click="DeleteSelectedButton_Click" x:Name="DeleteSelectedButton" ToolTip="Delete selected" Content="&#xe74d;" Margin="0,0,5,0" Style="{StaticResource ToolBarIconButton}"/>
-                            <TextBlock TextAlignment="Left" VerticalAlignment="Center" HorizontalAlignment="Left" Width="Auto" FontWeight="DemiBold" FontSize="25">Favourites bar</TextBlock>
+                            <TextBlock TextAlignment="Left" VerticalAlignment="Center" HorizontalAlignment="Left" Width="Auto" FontWeight="DemiBold" FontSize="25">Today</TextBlock>
                         </DockPanel>
-                        <ListBox KeyDown="FavouritesList_KeyDown" SelectionChanged="FavouritesList_SelectionChanged" SelectionMode="Extended" VirtualizingPanel.VirtualizationMode="Recycling" x:Name="FavouritesList" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" ScrollViewer.CanContentScroll="False" BorderThickness="0" Background="Transparent">
+                        <ListBox KeyDown="HistoryList_KeyDown" SelectionChanged="HistoryList_SelectionChanged" SelectionMode="Extended" VirtualizingPanel.VirtualizationMode="Recycling" x:Name="HistoryList" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" ScrollViewer.CanContentScroll="False" BorderThickness="0" Background="Transparent">
                             <ListBox.ItemsPanel>
                                 <ItemsPanelTemplate>
                                     <StackPanel/>
@@ -88,7 +106,7 @@
                                     <Border Width="Auto" HorizontalAlignment="Stretch">
                                         <DockPanel Margin="5">
                                             <Button DockPanel.Dock="Right" Click="DeleteSingleButton_Click" ToolTip="Remove" Content="&#xe711;" Margin="0" Style="{StaticResource ToolBarIconButton}"/>
-                                            <Button DockPanel.Dock="Right" MouseUp="FavouriteButton_MouseUp" Click="HyperlinkButton_Click" Content="&#xe8a7;" ToolTip="Open" Tag="{Binding Arguments}" Margin="0,0,5,0" Style="{StaticResource ToolBarIconButton}"/>
+                                            <Button DockPanel.Dock="Right" MouseUp="HistoryButton_MouseUp" Click="HyperlinkButton_Click" Content="&#xe8a7;" ToolTip="Open" Tag="{Binding Arguments}" Margin="0,0,5,0" Style="{StaticResource ToolBarIconButton}"/>
                                             <TextBlock Margin="0,0,5,0" DockPanel.Dock="Left" Width="35" VerticalAlignment="Center" HorizontalAlignment="Center" FontFamily="{StaticResource IconFontFamily}" TextAlignment="Center" FontSize="20" Text="&#xeb41;"/>
                                             <TextBlock Margin="0,0,5,0" Width="Auto" VerticalAlignment="Center" DockPanel.Dock="Left" Text="{Binding Name}" HorizontalAlignment="Stretch"/>
                                             <TextBlock Margin="0,0,5,0" FontSize="10" Foreground="{StaticResource GrayBrush}" VerticalAlignment="Center" Text="{Binding Tooltip}" HorizontalAlignment="Stretch" Width="Auto"/>
