--- a/SLBr/WinUIStyleDictionary.xaml
+++ b/SLBr/WinUIStyleDictionary.xaml
@@ -2382,6 +2382,7 @@ Margin="{TemplateBinding Padding}"/>
         <Setter Property="Tag" Value="{Binding ID}"/>
         <Setter Property="AllowDrop" Value="True"/>
         <EventSetter Event="PreviewMouseMove" Handler="TabItem_PreviewMouseMove"/>
+        <EventSetter Event="DragOver" Handler="TabItem_DragOver"/>
         <EventSetter Event="Drop" Handler="TabItem_Drop"/>
         <Setter Property="Template">
             <Setter.Value>
@@ -2602,6 +2603,7 @@ Margin="{TemplateBinding Padding}"/>
         <Setter Property="Tag" Value="{Binding ID}"/>
         <Setter Property="AllowDrop" Value="True"/>
         <EventSetter Event="PreviewMouseMove" Handler="TabItem_PreviewMouseMove"/>
+        <EventSetter Event="DragOver" Handler="TabItem_DragOver"/>
         <EventSetter Event="Drop" Handler="TabItem_Drop"/>
         <Setter Property="Template">
             <Setter.Value>
@@ -3036,9 +3038,9 @@ Margin="{TemplateBinding Padding}"/>
                             <RowDefinition x:Name="RowDefinition0" Height="Auto"/>
                             <RowDefinition x:Name="RowDefinition2" Height="*"/>
                         </Grid.RowDefinitions>
-                        <WinUI:TabPanel Margin="5" x:Name="HeaderPanel" Panel.ZIndex="1" KeyboardNavigation.TabIndex="1" Grid.Row="0" IsItemsHost="true" Background="Transparent"/>
-                        <Border Margin="0" x:Name="ContentPanel" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}"
-									KeyboardNavigation.TabNavigation="Local" KeyboardNavigation.DirectionalNavigation="Contained" KeyboardNavigation.TabIndex="2" Grid.Row="2">
+                        <Border x:Name="InsertIndicator" Width="2.5" Background="{StaticResource IndicatorBrush}" Visibility="Collapsed" HorizontalAlignment="Left" VerticalAlignment="Stretch" CornerRadius="1.5"/>
+                        <WinUI:TabPanel Margin="5" x:Name="HeaderPanel" Panel.ZIndex="1" AllowDrop="True" KeyboardNavigation.TabIndex="1" Grid.Row="0" IsItemsHost="true" Background="Transparent" DragOver="HeaderPanel_DragOver" DragLeave="HeaderPanel_DragLeave" Drop="HeaderPanel_Drop"/>
+                        <Border Margin="0" x:Name="ContentPanel" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" KeyboardNavigation.TabNavigation="Local" KeyboardNavigation.DirectionalNavigation="Contained" KeyboardNavigation.TabIndex="2" Grid.Row="2">
                             <ContentPresenter x:Name="PART_SelectedContentHost" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" Margin="0" ContentSource="SelectedContent"/>
                         </Border>
                     </Grid>
@@ -3062,7 +3064,10 @@ Margin="{TemplateBinding Padding}"/>
                                 <ContentPresenter ContentSource="SelectedContent" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" Margin="0"/>
                             </ScrollViewer>
                             <ScrollViewer Width="250" MinWidth="45" MaxWidth="250" x:Name="TabPanelScroll" VerticalScrollBarVisibility="Hidden" HorizontalAlignment="Left" Margin="{TemplateBinding Padding}">
-                                <TabPanel Panel.ZIndex="1" Margin="5,0" IsItemsHost="True" Background="Transparent"/>
+                                <Grid>
+                                    <TabPanel Panel.ZIndex="1" Margin="5,0" IsItemsHost="True" Background="Transparent" AllowDrop="True" DragOver="HeaderPanel_DragOver" DragLeave="HeaderPanel_DragLeave" Drop="HeaderPanel_Drop"/>
+                                    <Border Panel.ZIndex="2" x:Name="InsertIndicator" Height="2.5" Background="{StaticResource IndicatorBrush}" Visibility="Collapsed" HorizontalAlignment="Stretch" VerticalAlignment="Top" CornerRadius="1.5"/>
+                                </Grid>
                             </ScrollViewer>
                             <Thumb Opacity="0" x:Name="TabResizeThumb" Width="5" HorizontalAlignment="Left" Cursor="SizeWE"/>
                         </Grid>
